chore: force annotation layer to cover entire space, correct annotations out of screen

--- a/src/Extension.css
+++ b/src/Extension.css
@@ -1,3 +1,5 @@
 .App {
   text-align: left;
+  height: inherit;
+  width: inherit;
 }
