--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,18 @@
 html {
   /* pointer-events: none; */
   background: none transparent;
+  height: 100%;
+  width: 100%;
 }
 
 body {
   margin: 0;
   padding: 0;
+  height: inherit;
+  width: inherit;
 }
 
+#root {
+  height: inherit;
+  width: inherit;
+}
